objects/FLODocs__FLO_Customization_Profile_PS__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__Customization__c</fullName>
        <label>Customization</label>
        <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
        <relationshipLabel>FLO Customization Profile PS</relationshipLabel>
        <relationshipName>FLO_Customization_Profile_PS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_Action_Override__c</fullName>
        <label>Profile Action Override</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_Application_Visibility__c</fullName>
        <label>Profile Application Visibility</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_BaseXml__c</fullName>
        <label>Profile BaseXml</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_Category_Group_Visibility__c</fullName>
        <label>Profile Category Group Visibility</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_Class_Access__c</fullName>
        <label>Profile Class Access</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_Custom_Permissions__c</fullName>
        <label>Profile Custom Permissions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_External_Data_Source_Access__c</fullName>
        <label>Profile External Data Source Access</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_Field_Permissions_Has_Changed__c</fullName>
        <label>Profile Field Permissions Has Changed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_Field_Permissions__c</fullName>
        <label>Profile Field Permissions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_Ip_Ranges__c</fullName>
        <label>Profile Ip Ranges</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_Layout_Assignment__c</fullName>
        <label>Profile Layout Assignment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_Login_Hours__c</fullName>
        <label>Profile Login Hours</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_Object_Permissions__c</fullName>
        <label>Profile Object Permissions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_Page_Access__c</fullName>
        <label>Profile Page Access</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_RecordType_Visibility__c</fullName>
        <label>Profile RecordType Visibility</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_Tab_Visibility__c</fullName>
        <label>Profile Tab Visibility</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_User_Permissions__c</fullName>
        <label>Profile User Permissions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>FLO Customization Profile PS</label>
    <nameField>
        <label>Flo Profile PS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FLO Customization Profile PS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>